--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Test
         run: docker-compose run --rm speedov2 sh -c "python manage.py test"
       - name: Lint
-        run: docker-compose run --rm app sh -c "flake8"
+        run: docker-compose run --rm speedov2 sh -c "flake8"
